--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
 }
 
 body {
-    background-color: #fcd6e8; /* Cor de fundo mais rosa para a página inteira */
+    background-color: #F8F8FF; /* Cor de fundo mais rosa para a página inteira */
 }
 
 .logo img {
